RESOLVED FIXED127584
[New Multicolumn] Don't destroy all the renderers when a multi-column block stops being multi-column (and vice versa)
https://bugs.webkit.org/show_bug.cgi?id=127584
Summary [New Multicolumn] Don't destroy all the renderers when a multi-column block s...
Dave Hyatt
Reported 2014-01-24 13:56:28 PST
Don't destroy all the renderers when a multi-column block stops being multi-column (and vice versa). We make the logic for this share with the old multi-column code so that the two are closer in line.
Attachments
Patch (22.72 KB, patch)
2014-01-24 14:02 PST, Dave Hyatt
bdakin: review+
Dave Hyatt
Comment 1 2014-01-24 14:02:37 PST
WebKit Commit Bot
Comment 2 2014-01-24 14:03:42 PST
Attachment 222153 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/RenderBlockFlow.h:435: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 3 2014-01-24 14:48:21 PST
Landed in r162726.
Note You need to log in before you can comment on or make changes to this bug.